# ReOrchestra

./: .env.example  .gitignore  AGENTS.md  FRONTEND_PROMPT.md  FRONTEND_SPEC.md  PRD.md  README.md  TODO.md  dashboard.html  justfile  profiles.json  pyproject.toml  requirements.txt  setup_camofox.sh
.github/workflows/: ci.yml
app/: config.py  database.py  gui.py  logging_config.py  main.py
app/api/: accounts.py  actions.py  admin.py  frontend.py  proxies.py  queue_queue.py  queue_tasks.py  queue_workers.py  router.py
app/logging/: __init__.py  audit.py  redact.py  structured.py  timing.py
app/models/: __init__.py
app/schemas/: __init__.py  account.py  action.py  common.py  proxy.py  task.py
app/services/: account_service.py  actions.py  browser.py  burn_detector.py  config_service.py  login.py  proxy_service.py  (+7 more)
config/: default.yaml  proxies.yaml
docs/: AGENTS.md  ARCHITECTURE.md  FRONTEND.md  IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  WORKER_QUEUE_SYSTEM.md
frontend/: SPEC.md  accounts.html  dead-letter.html  index.html  proxies.html  queue.html  settings.html  tasks.html  workers.html
tests/: __init__.py  conftest.py  server.py  start_permanent_tunnel.py  start_tunnel.py  test_accounts.py  test_actions.py  test_config.py  test_database.py  test_dedup.py  test_deduplication.py  test_downvote_comment.py  test_downvote_post.py  test_follow_user.py  test_join_subreddit.py  test_leave_subreddit.py  test_login.py  test_queue.py  test_rate_limiter.py  test_save_post.py  test_tasks.py  test_unfollow_user.py  test_upvote_comment.py  test_upvote_post.py
(+37 files in other folders)
