[project]
name = "reorchestra"
version = "0.9.5"
description = "ReOrchestra - Bulk Reddit account automation. Manage hundreds of Reddit accounts with task-based queuing, automatic rate limiting, and stealth browser integration."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.23",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "python-multipart>=0.0.6",
    "httpx>=0.24",
    "psutil>=7.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:sqlalchemy.sql.schema",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.1",
]
